--- a/notebooks/Hexagons_phase_diagram_pinned_bs.ipynb
+++ b/notebooks/Hexagons_phase_diagram_pinned_bs.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A phase diagram with the lowest energy configurations in islands with a ferromagnetic rim. This notebook follows the same procedure of the notebook for the phase diagram of islands with open boundaries:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +30,13 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('lato_style.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data"
    ]
   },
   {
