--- a/notebooks/image_rotated_energies_positive_fields.ipynb
+++ b/notebooks/image_rotated_energies_positive_fields.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -51,6 +58,13 @@
    "source": [
     "from matplotlib.lines import Line2D\n",
     "import matplotlib.gridspec as gridspec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
    ]
   },
   {
@@ -145,6 +159,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation object"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -171,7 +192,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the total energy for different configurations in a dictionary:"
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the field, total energy, energy from all the interactions, and topological charge for the different configurations in a dictionary:"
    ]
   },
   {
@@ -228,6 +256,13 @@
     "    print(B, total_energy / C.eV)\n",
     "\n",
     "    sat_up.append([B * 1e-3, total_energy, dmi, exchange, anisotropy, zeeman, Q])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plots"
    ]
   },
   {
@@ -303,6 +338,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Snapshots of the configurations at different fields which we are going to use in the energy plot. We get the data for  fields of 500 and 1500 mT:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -311,8 +353,16 @@
     "spin_field = {'1-sk-down': [], '3-sk-down': [], 'tgt-st-up': [], 'fm-up':[], 'tgt-st-up-3PI':[], 'tgt-st-down-3PI':[], 'helicoid-x-4nm': []}\n",
     "\n",
     "for s in spin_field.keys():\n",
+    "    # Fields:\n",
     "    for B in [500, 1500]:\n",
     "        spin_field[s].append(load_magnetisation_relaxation(sim, B * 1e-3, npy_state(s, B)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data at 500 mT:"
    ]
   },
   {
@@ -347,6 +397,13 @@
     "\n",
     "# plt.savefig('image-rotated_hexagonal_island_PdFeIr111_states_B0mT.jpg',\n",
     "#             dpi=150, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data at 1500 mT:"
    ]
   },
   {
@@ -387,6 +444,13 @@
    "metadata": {},
    "source": [
     "# Full energies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we make a plot showing all the energies and the topological charge. Snapshots are shown below the grid of energy plots:"
    ]
   },
   {
@@ -702,6 +766,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare the energies from the experimental configurations with the simulation of skyrmionic states. This plot is a simplified version of the Full diagram with all the energies. In this case we show the total energy of the simulated and the experimental orderings, the topological charge of the simulations, and the snapshots below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -798,7 +869,7 @@
     "    ax.plot(np.array(states['1-sk-down'])[:-20, 0], np.array(states['3-sk-down'])[:-20, i] / scale - zero_st[:-20],\n",
     "            'v-', ms=10, color=d_palette1[2])\n",
     "\n",
-    "    # Energy experimental data\n",
+    "    # Energy experimental data --------------------------------------------------------\n",
     "    if i == 1:\n",
     "        \n",
     "        ftr = np.logical_and(exp_data[:, 1] > -0.1, exp_data[:, 1] < 2.1)\n",
@@ -1107,7 +1178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2$\\pi$ and $3\\pi$ vortices"
+    "# Profile of 2$\\pi$ and $3\\pi$ vortices"
    ]
   },
   {
