--- a/notebooks/image_rotated_relaxed_from_image.ipynb
+++ b/notebooks/image_rotated_relaxed_from_image.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook showing the experimental images of magnetic configurations in quasi-hexagonal islands at different fields. We compare these results with the simulation of the experimental observations. We also compute the energies and topological charge of the simulated orderings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -36,6 +50,13 @@
     "sim_snap = lambda i: 'hexagonal_system/relaxation/image_rotated_relax-from-image/pngs/{:03d}.png'.format(i)\n",
     "exp_snap = lambda i: 'Romming_data/Pd_Fe_Ir111_configurations/{:03d}.png'.format(i)\n",
     "im_snap = lambda i: 'Romming_data/Pd_Fe_Ir111_configurations/gimp/png/{:03d}.png'.format(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plots"
    ]
   },
   {
@@ -329,6 +350,13 @@
     "    e_FP = sim.compute_energy() / C.eV\n",
     "    \n",
     "    print('State {:03d} at a field of B={:>5.2f} T. E - E_FP = {:.5f} eV'.format(i, fields[i], e - e_FP))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mesh\n"
    ]
   },
   {
