Updated path to simulations in nbs

--- a/notebooks/Hexagons_phase_diagram.ipynb
+++ b/notebooks/Hexagons_phase_diagram.ipynb
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/hexagons_phase_diagram_B_L/'\n",
-    "top_charge_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/hexagons_phase_diagram_B_L/top_charges/'"
+    "sim_dir = '../simulations/relaxation/hexagons_phase_diagram_B_L/'\n",
+    "top_charge_dir = '../simulations/relaxation/hexagons_phase_diagram_B_L/top_charges/'"
    ]
   },
   {
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pngs_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/pngs/'"
+    "pngs_dir = '../simulations/relaxation/pngs/'"
    ]
   },
   {
