--- a/notebooks/Hexagons_phase_diagram_pinned_bs.ipynb
+++ b/notebooks/Hexagons_phase_diagram_pinned_bs.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/hexagons_phase_diagram_B_L_pinned_bs/'\n",
-    "top_charge_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/hexagons_phase_diagram_B_L_pinned_bs/top_charges/'"
+    "sim_dir = '../simulations/relaxation/hexagons_phase_diagram_B_L_pinned_bs/'\n",
+    "top_charge_dir = '../simulations/relaxation/hexagons_phase_diagram_B_L_pinned_bs/top_charges/'"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pngs_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/pngs_pinned_bs/'"
+    "pngs_dir = '../simulations/relaxation/pngs_pinned_bs/'"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pngs_dir = '/media/david/Boar/PdFeIr/hexagonal_system/relaxation/pngs_pinned_bs_GB/'"
+    "pngs_dir = '../simulations/relaxation/pngs_pinned_bs_GB/'"
    ]
   },
   {
