--- a/notebooks/image_rotated_energies_positive_fields.ipynb
+++ b/notebooks/image_rotated_energies_positive_fields.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def npy_state(state, B, base_folder='hexagonal_system/relaxation/image_rotated_B-sweep_DT/npys/'):\n",
+    "def npy_state(state, B, base_folder='../simulations/relaxation/image_rotated_B-sweep_DT/npys/'):\n",
     "    npy_folder_name = '2Dhex_image-rotated_PdFe-Ir_{}_B{}mT_npys'.format(state, B)\n",
     "    npy_file = os.listdir(os.path.join(base_folder, npy_folder_name))[0]\n",
     "    # print(npy_file)\n",
@@ -714,7 +714,7 @@
    "outputs": [],
    "source": [
     "def sim_npy(i):\n",
-    "    fdir = ('hexagonal_system/relaxation/image_rotated_relax-from-image/npys/'\n",
+    "    fdir = ('../simulations/relaxation/image_rotated_relax-from-image/npys/'\n",
     "            '2Dhex_image-rotated_PdFe-Ir_configuration-{:03d}_npys/'.format(i))\n",
     "    return fdir + os.listdir(fdir)[-1]\n",
     "\n",
@@ -1435,7 +1435,7 @@
     "\n",
     "for s in states_lowtol.keys():\n",
     "    for B in range(0, 2001, 100):\n",
-    "        total_energy, dmi, exchange, anisotropy, zeeman, Q = load_energy_relaxation(sim, B * 1e-3, npy_state(s, B, base_folder='hexagonal_system/relaxation/image_rotated_B-sweep/npys/'))\n",
+    "        total_energy, dmi, exchange, anisotropy, zeeman, Q = load_energy_relaxation(sim, B * 1e-3, npy_state(s, B, base_folder='../simulations/relaxation/image_rotated_B-sweep/npys/'))\n",
     "        states_lowtol[s].append([B * 1e-3, total_energy, dmi, exchange, anisotropy, zeeman, Q])"
    ]
   },
@@ -1550,7 +1550,7 @@
     "sfield_lowtol = {'1-sk-down': {}}\n",
     "for s in sfield_lowtol.keys():\n",
     "    for B in [0, 200]:\n",
-    "        sfield_lowtol[s][B] = load_magnetisation_relaxation(sim, B * 1e-3, npy_state(s, B, base_folder='hexagonal_system/relaxation/image_rotated_B-sweep/npys/'))"
+    "        sfield_lowtol[s][B] = load_magnetisation_relaxation(sim, B * 1e-3, npy_state(s, B, base_folder='../simulations/relaxation/image_rotated_B-sweep/npys/'))"
    ]
   },
   {
