--- a/notebooks/image_rotated_relaxed_from_image.ipynb
+++ b/notebooks/image_rotated_relaxed_from_image.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_snap = lambda i: 'hexagonal_system/relaxation/image_rotated_relax-from-image/pngs/{:03d}.png'.format(i)\n",
+    "sim_snap = lambda i: '../simulations/relaxation/image_rotated_relax-from-image/pngs/{:03d}.png'.format(i)\n",
     "exp_snap = lambda i: 'Romming_data/Pd_Fe_Ir111_configurations/{:03d}.png'.format(i)\n",
     "im_snap = lambda i: 'Romming_data/Pd_Fe_Ir111_configurations/gimp/png/{:03d}.png'.format(i)"
    ]
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "def sim_npy(i):\n",
-    "    fdir = ('hexagonal_system/relaxation/image_rotated_relax-from-image/npys/'\n",
+    "    fdir = ('../simulations/relaxation/image_rotated_relax-from-image/npys/'\n",
     "            '2Dhex_image-rotated_PdFe-Ir_configuration-{:03d}_npys/'.format(i))\n",
     "    return fdir + os.listdir(fdir)[-1]\n",
     "\n",
